[package]
name = "aoc-2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "*"
curl = "*"
rand = "*"
itertools = "*"
ndarray = "*"
ndarray-csv = "*"
csv = "*" 
statistical = "*"
num = "*"
petgraph = "*"
priority-queue = "*"
bit-vec = "*"
reduce = "*"

[profile.release]
debug = 1